// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zacs-loader extracts CSS 1`] = `
"/* eslint-disable */
/*
ZACS-generated CSS stylesheet begins below.
PRO TIP: If you get a ReferenceError on the line below, it means that your Webpack ZACS support is not configured properly.
If you only see this comment and the one below in generated code, this is normal, nothing to worry about!
*/
const styles = require("../../../../.zacs-cache/src/webpack/__tests__/examples/basic.zacs.css")





/* ZACS-generated CSS stylesheet ends above */

zacs.view(styles.someName)
"
`;

exports[`zacs-loader extracts CSS 2`] = `
"/* Generated CSS file (from ZACS Stylesheets) - do not edit! */

.basic-zacs__someName {
  background-color: red;
  height: 100;
}
"
`;

exports[`zacs-loader extracts CSS 3`] = `
"// extracted by mini-css-extract-plugin
export const someName = "basic-zacs__someName";"
`;

exports[`zacs-loader extracts CSS with slightly malformed whitespace 1`] = `
"/* eslint-disable */
/*
ZACS-generated CSS stylesheet begins below.
PRO TIP: If you get a ReferenceError on the line below, it means that your Webpack ZACS support is not configured properly.
If you only see this comment and the one below in generated code, this is normal, nothing to worry about!
*/
const styles = require("../../../../.zacs-cache/src/webpack/__tests__/examples/brokenWhitespace.zacs.css")











/* ZACS-generated CSS stylesheet ends above */

zacs.view(styles.someName)
"
`;

exports[`zacs-loader has configurable cache directory and extension 1`] = `
"// extracted by mini-css-extract-plugin
export const someName = "basic-zacstest__someName";"
`;
